@@ -9,7 +9,8 @@ CHANGES
 $Id$
 ================== Release 4.0.0-dev ==============
 
-(No Changes)
+* SOLR-3470: Bug fix: custom Carrot2 tokenizer and stemmer factories are 
+  respected now (Stanislaw Osinski, Dawid Weiss)
 
 ================== Release 3.6.0 ==================
 
